<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cartas"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNCartas"
        app:layout_constraintEnd_toEndOf="@+id/editTextNCartas"
        app:layout_constraintStart_toStartOf="@+id/editTextNCartas" />

    <EditText
        android:id="@+id/editTextNCartas"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugadores"
        android:textColor="@color/blanco"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNJugadores"
        app:layout_constraintEnd_toEndOf="@+id/editTextNJugadores"
        app:layout_constraintStart_toStartOf="@+id/editTextNJugadores" />

    <EditText
        android:id="@+id/editTextNJugadores"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:shadowColor="@color/principal"
        android:textColorHint="@color/principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnEmpezar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secundario"
        android:text="@string/empezar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87"
        app:rippleColor="@color/secundario" />
</androidx.constraintlayout.widget.ConstraintLayout>